fix(pgr): harden unified escalation flow